[BE] test: cors 테스트 진행